fluxcd/zz-graveyard/apps/overlays/production/code-server/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: code-server
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - dungeon-map-002
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: code-server
          image: docker.io/linuxserver/code-server:4.129.0
          volumeMounts:
            - name: tingle-tuner-code-server-config
              mountPath: /config
            - name: srv
              mountPath: /srv
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: srv
          hostPath:
            path: /srv
            type: Directory
        - name: tingle-tuner-code-server-config
          hostPath:
            path: /opt/k8s-data/code-server/config
            type: DirectoryOrCreate
