fluxcd/zz-graveyard/apps/overlays/production/code-server/statefulset-remove-vct.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: code-server
spec:
  volumeClaimTemplates: []
