fluxcd/zz-graveyard/apps/overlays/production/code-server/service-code-server-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    policy.prplanit.com/ingress: "true"
