fluxcd/zz-graveyard/apps/overlays/production/code-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: tingle-tuner
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Tools & Utilities (Tingle Tuner🔧)"
spec:
  parentRefs:
    - name: xylem-gateway
      namespace: arylls-lookout
      sectionName: https-pcfae
  hostnames:
    - "code.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: code-server
          port: 8443
